# rbot

./: Cargo.toml  README.md
examples/: cli.rs  default.rs
src/: lib.rs
